--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -20,14 +20,12 @@
 						<strong>Filter:</strong>
 					</div>
 					<div class="panel-body">
-						<div class="row form-group">
-							<div class="col-md-8 col-md-offset-2 col-xs-12">
-								<select class="form-control form-control-sm" name="filter" id="filter" >
-								{% for filter in list_filters %}
-									<option value='{{ filter.Code }}'>{{ filter.Name }}</option>
-								{% endfor %}
-								</select>
-							</div>
+						<div class="col-md-8 col-md-offset-2 col-xs-12">
+							<select class="form-control form-control-sm" name="filter" id="filter" >
+							{% for filter in list_filters %}
+								<option value='{{ filter.Code }}'>{{ filter.Name }}</option>
+							{% endfor %}
+							</select>
 						</div>
 					</div>
 				</div>
@@ -36,17 +34,15 @@
 						<strong>Grating [&#8491;]:</strong>
 					</div>
 					<div class="panel-body">
-						<div class="row form-group">
-							<div class="col-xs-12 col-md-6 ">
-								<select class="form-control" name="grating" id="grating" onChange="change_grating_value();">
-									{% for grating in list_gratings %}
-										<option value='{{ grating.Name }}' aux='{{ grating.Central_Wave }}'>{{ grating.Name }}</option>
-									{% endfor %}
-								</select>
-							</div>
-							<div class="col-xs-12 col-md-6 text-left">
-								<input type="text" class="form-control" id="rating_value" name="grating_value" >
-							</div>
+						<div class="col-xs-12 col-md-6 ">
+							<select class="form-control" name="grating" id="grating" onChange="change_grating_value();">
+								{% for grating in list_gratings %}
+									<option value='{{ grating.Name }}' aux='{{ grating.Central_Wave }}'>{{ grating.Name }}</option>
+								{% endfor %}
+							</select>
+						</div>
+						<div class="col-xs-12 col-md-6 text-left">
+							<input type="text" class="form-control" id="rating_value" name="grating_value" >
 						</div>
 					</div>
 				</div>
@@ -77,30 +73,24 @@
 				<strong>Calculation method:</strong> <a href="#" class="badge">more info</a>
 			</div>
 			<div class="panel-body">
-				<div class="col-xs-12 col-md-6">
+				<div class="col-xs-12 col-md-5">
 					<div class="panel panel-default">
 						<div class="panel-heading text-center ">
 							<input class="" type="radio" name="type_results" value="SN_ratio"/> S/N ratio
 						</div>
 						<div class="panel-body">
-							<div class="row ">
-								<div class="col-xs-12 col-md-6 ">
-									<div class="form-group">
-										<label for="signal_noise">S/N</label>
-										<input class="form-control" type="number" id="signal_noise" name="signal_noise" value="5.000" step="0.001"/>
-									</div>
-								</div>
-								<div class="col-xs-12 col-md-6">
-									<div class="form-group">
-										<label for="DIT_exp" >DIT (seconds)</label>
-										<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0000" step="0.0001"/>
-									</div>
-								</div>
+							<div class="col-xs-12 col-md-6 ">
+								<label for="signal_noise">S/N</label>
+								<input class="form-control" type="number" id="signal_noise" name="signal_noise" value="5.000" step="0.001"/>
+							</div>
+							<div class="col-xs-12 col-md-6">
+								<label for="DIT_exp" >DIT (seconds)</label>
+								<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0000" step="0.0001"/>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-6">
+				<div class="col-xs-12 col-md-5">
 					<div class="panel panel-default">
 						<div class="panel-heading text-center ">
 							<input class="" type="radio" name="type_results" value="exposure_time"/> Exposure Time
@@ -117,10 +107,21 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-xs-12 col-md-2 imaging_dependent">
+					<div class="panel panel-default">
+						<div class="panel-heading text-center ">
+							FCore
+						</div>
+						<div class="panel-body">
+							<label for="fcore"> FCore </label>
+							<input class="form-control" type="number" name="fcore" id="fcore" value="1.5" step="0.01"/>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-md-12">
+	<div class="col-xs-12 col-md-12 form-inline">
 		<div class="panel panel-primary hide" id="ifu_dependent">
 			<div class="panel-heading">
 				<strong>Analysis method:</strong> <a href="#" class="badge"> more info</a>
@@ -150,7 +151,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12">
+	<div class="col-xs-12 form-inline">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
 				<strong>Output:</strong>
