--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -73,48 +73,48 @@
 				<strong>Calculation method:</strong> <a href="#" class="badge">more info</a>
 			</div>
 			<div class="panel-body">
-				<div class="col-xs-12 col-md-5">
+				<div class="col-xs-12 col-md-3 col-lg-2">
 					<div class="panel panel-default">
 						<div class="panel-heading text-center ">
 							<input class="" type="radio" name="type_results" value="SN_ratio"/> S/N ratio
 						</div>
 						<div class="panel-body">
-							<div class="col-xs-12 col-md-6 ">
+							<div class="col-xs-12 col-md-12 ">
 								<label for="signal_noise">S/N</label>
 								<input class="form-control" type="number" id="signal_noise" name="signal_noise" value="5.000" step="0.001"/>
-							</div>
-							<div class="col-xs-12 col-md-6">
-								<label for="DIT_exp" >DIT (seconds)</label>
-								<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0000" step="0.0001"/>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-5">
+				<div class="col-xs-12 col-md-3 col-lg-2">
 					<div class="panel panel-default">
 						<div class="panel-heading text-center ">
 							<input class="" type="radio" name="type_results" value="exposure_time"/> Exposure Time
 						</div>
 						<div class="panel-body">
-							<div class="col-xs-12 col-md-6">
+							<div class="col-xs-12 col-md-12">
 								<label for="N_exp"> NDIT </label>
 								<input class="form-control" type="number" name="N_exp" id="N_exp" value="100"/>
-							</div>
-							<div class="col-xs-12 col-md-6">
-								<label for="dit_pattern"> DIT Pattern </label>
-								<input class="form-control" type="number" name="dit_pattern" id="dit_pattern" value="1" disabled/>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-2 imaging_dependent">
+				<div class="col-xs-12 col-md-6 col-lg-8 imaging_dependent">
 					<div class="panel panel-default">
-						<div class="panel-heading text-center ">
-							FCore
-						</div>
+						<div class="panel-heading text-center ">Both </div>
 						<div class="panel-body">
-							<label for="fcore"> FCore </label>
-							<input class="form-control" type="number" name="fcore" id="fcore" value="1.5" step="0.01"/>
+							<div class="col-xs-12 col-md-4">
+								<label for="fcore"> FCore </label>
+								<input class="form-control" type="number" name="fcore" id="fcore" value="1.5" step="0.01"/>
+							</div>
+							<div class="col-xs-12 col-md-4">
+								<label for="dit_pattern"> DIT Pattern </label>
+								<input class="form-control" type="number" name="dit_pattern" id="dit_pattern" value="1" disabled/>
+							</div>
+							<div class="col-xs-12 col-md-4">
+								<label for="DIT_exp" >DIT (seconds)</label>
+								<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0000" step="0.0001"/>
+							</div>
 						</div>
 					</div>
 				</div>
