--- a/frida/templates/calculate_ifs.html
+++ b/frida/templates/calculate_ifs.html
@@ -353,7 +353,7 @@
 			<div class="col-xs-12">
 				<ul class="list-group">
 					<li class="list-group-item active">Target Setup</li>
-					<li class="list-group-item"> Spatially integrated brightness <span class="badge">{{ target_info.Band }} = {{ target_info.Magnitude }} {{target_info.MagSystem}} </span> </li>
+					<li class="list-group-item"> Total source brightness <span class="badge">{{ target_info.Band }} = {{ target_info.Magnitude }} {{target_info.MagSystem}} </span> </li>
 					<li class="list-group-item"> Flux distribution type <span class="badge"> {{ target_info.energy_type }}</span> </li>
 					<li class="list-group-item"> Geometry <span class="badge"> {{ target_info.source_type}} </span> </li>
 				</ul>
@@ -367,16 +367,17 @@
 			</div>
 			<div class="col-xs-12">
 				<ul class="list-group">
-					<li class="list-group-item active">GTCAO NGS Setup</li>
+					<li class="list-group-item active">GTCAO NGS </li>
 					<li class="list-group-item"> Reference star magnitude (R Band)<span class="badge"> {{ guide_star.Magnitude }}</span> </li>
 					<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
+					<li class="list-group-item"> Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat }}%</span> </li>
 				</ul>
 			</div>
 			<div class="col-xs-12">
 				<ul class="list-group">
 					<li class="list-group-item active">Instrument Setup</li>
-					<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.pixscale|astro_unit_value:'mas'|floatformat:0 }} mas/pix </span> </li>
-					<li class="list-group-item"> Grating <span class="badge"> {{ grating.Grating }} [{{grating.Central_wave}}] </span> </li>
+					<li class="list-group-item"> Angular resolution scale <span class="badge">{% astro_round_to frida_setup.pixscale 0 'mas' %}/pix </span> </li>
+					<li class="list-group-item"> Grating <span class="badge"> {{ grating.Grating }} centered at {{grating.Central_wave}} </span> </li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-12" >
@@ -385,6 +386,7 @@
 					<li class="list-group-item"> DIT <span class="badge">{{dit}}</span> </li>
 					<li class="list-group-item"> RON <span class="badge">{{frida_setup.detector.ron}}</span> </li>
 					<li class="list-group-item"> DIT pattern<span class="badge">{{dit_pattern}}</span> </li>
+					<li class="list-group-item"> Dark current per DIT<span class="badge">{{darkc}}</span> </li>
 				</ul>
 			</div>
 		</div>
@@ -393,10 +395,10 @@
 				<ul class="list-group">
 					<li class="list-group-item list-group-item-danger">Transmission Model</li>
 					<li class="list-group-item"> 
-						Signal to Noise at {{ total_exposure_time }} <span class="badge">{{ signal_noise_req | floatformat:1}}</span>
+						Signal to Noise after {{ total_exposure_time }} at {{lambda_eff}} <span class="badge">{{ signal_noise_req | floatformat:1}}</span>
 					</li>
 					<li class="list-group-item"> 
-						Detector Integration Time for one exposure <span class="badge">{{ dit }}</span>
+						Detector Integration Time for one exposure <span class="badge">{{ dit|astro_round }}</span>
 					</li>
 					<li class="list-group-item"> 
 						Number of detector integrations (rounded up) <span class="badge">{{ ndit }}</span>
@@ -405,43 +407,21 @@
 						Total exposure time <span class="badge">{{ total_exposure_time }}</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ signal_noise_req }}</span>
-					</li>
-					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Detector saturation limit (e<sup>-</sup>) <span class="badge">{{ ndit }}</span>
+						<i class="fa fa-warning text-danger"></i> Max. intensity at central pixel per DIT (object+sky)  <span class="badge">????</span>
 					</li>
 					<li class="list-group-item "> 
-						Aperture Radius (defining the S/N reference area) <span class="badge">{{ Aperture_radius|astro_unit_value:'mas'|floatformat:0 }} mas</span>
+						Aperture Radius (defining the S/N reference area) <span class="badge">{% astro_round_to Aperture_radius 0 'mas' %}</span>
 					</li>
 					<li class="list-group-item"> 
 						Number of pixels in Aperture <span class="badge">{{ AreaNpix|floatformat:0 }} pixels</span>
 					</li>
-					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">signal es un array..</span>
-					</li>
-					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">????</span>
-					</li>
-					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Background (1 DIT) <span class="badge">{{ signal_noise_req }}</span>
-					</li>
-					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Limiting magnitude (S/N=3) <span class="badge">{{ dit }}</span>
-					</li>
-					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> BLIP integration time <span class="badge">{{ ndit }}</span>
-					</li>
-					<li class="list-group-item"> 
-						Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat }}%</span>
-					</li>
+					{% if not target_info.extended %}
 					<li class="list-group-item"> 
 						Encircled Energy (Target)  <span class="badge">{{ encircled_energy|percentage|floatformat }}%</span>
 					</li>
+					{% endif %}
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Estimated {{ filter.Name }}-band ( {{ target_info.lambda_band }} ) on-axis Strehl Ratio  <span class="badge">{{ ndit }}</span>
-					</li>
-					<li class="list-group-item"> 
-						Overall transmission at {{ lambda_eff|astro_unit:'AA'}}<span class="badge">{{ throughput_lambda|astro_unit_value|floatformat:2 }} {{throughput_lambda.unit}}</span>
+						Overall transmission at {{ lambda_eff|astro_unit:'AA'}}<span class="badge">{{ throughput_lambda|astro_round:2 }}</span>
 					</li>
 				</ul>
 			</div>
