--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -252,6 +252,7 @@
 		};
 		$("#sky_radContainer").CanvasJSChart(options_sky_rad);
 
+		{% if snr_graph %}
 		var options_snr= {
 			exportEnabled: true,
 			animationEnabled: false,
@@ -299,6 +300,7 @@
 			]
 		};
 		$("#snrContainer").CanvasJSChart(options_snr);
+		{% endif %}
 
 		function toggleDataSeries(e) {
 			if (typeof (e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
@@ -321,7 +323,7 @@
 			<div class="col-xs-12">
 				<ul class="list-group">
 					<li class="list-group-item active">Target Setup</li>
-					<li class="list-group-item"> Spatially integrated brightness <span class="badge">{{ target_info.Band }} = {{ target_info.Magnitude }} {{target_info.MagSystem}} </span> </li>
+					<li class="list-group-item"> Total Source brightness <span class="badge">{{ target_info.Band }} = {{ target_info.Magnitude }} {{target_info.MagSystem}} </span> </li>
 					<li class="list-group-item"> Flux distribution type <span class="badge"> {{ target_info.energy_type }}</span> </li>
 					<li class="list-group-item"> Geometry <span class="badge"> {{ target_info.source_type}} </span> </li>
 				</ul>
@@ -335,24 +337,29 @@
 			</div>
 			<div class="col-xs-12">
 				<ul class="list-group">
-					<li class="list-group-item active">AO NGS Setup</li>
+					<li class="list-group-item active">GTCAO NGS</li>
 					<li class="list-group-item"> Reference star magnitude (R Band)<span class="badge"> {{ guide_star.Magnitude }}</span> </li>
 					<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
+					<li class="list-group-item"> FWHM at difraction limit <span class="badge"> {{ fwhm_core|astro_round:0 }}</span> </li>
+					<li class="list-group-item"> 
+						Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat }}%</span>
+					</li>
 				</ul>
 			</div>
 			<div class="col-xs-12">
 				<ul class="list-group">
 					<li class="list-group-item active">Instrument Setup</li>
-					<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.pixscale|astro_unit_value:'mas'|floatformat:0 }} mas/pix </span> </li>
+					<li class="list-group-item"> Angular resolution scale <span class="badge">{% astro_round_to frida_setup.pixscale 0 'mas' %}/pix </span> </li>
 					<li class="list-group-item"> Camera Filter <span class="badge"> {{ obs_filter.info.Name }}</span> </li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-12" >
 				<ul class="list-group">
 					<li class="list-group-item active">Observation Setup</li>
-					<li class="list-group-item"> DIT <span class="badge">{{dit}}</span> </li>
+					<li class="list-group-item"> DIT <span class="badge">{{dit|astro_round}}</span> </li>
 					<li class="list-group-item"> RON <span class="badge">{{frida_setup.detector.ron}}</span> </li>
 					<li class="list-group-item"> DIT pattern<span class="badge">{{dit_pattern}}</span> </li>
+					<li class="list-group-item"> Dark current per DIT<span class="badge">{{darkc}}</span> </li>
 				</ul>
 			</div>
 			{% if img_name != None %}
@@ -371,80 +378,56 @@
 				<ul class="list-group">
 					<li class="list-group-item list-group-item-danger">Transmission Model</li>
 					<li class="list-group-item"> 
-						Signal to Noise at {{ total_exposure_time }} <span class="badge">{{ signal_noise_req | floatformat:1}}</span>
+						Signal to Noise at {{ total_exposure_time }} <span class="badge">{{ signal_noise_req|floatformat:2 }} </span>
 					</li>
 					<li class="list-group-item"> 
-						Detector Integration Time for one exposure <span class="badge">{{ dit }}</span>
+						Detector Integration Time for one exposure <span class="badge">{{ dit|astro_round }}</span>
 					</li>
 					<li class="list-group-item"> 
-						Number of detector integrations (rounded up) <span class="badge">{{ ndit }}</span>
+						Number of detector integrations (rounded up) <span class="badge">{{ ndit|floatformat:0 }}</span>
 					</li>
 					<li class="list-group-item"> 
-						Total exposure time <span class="badge">{{ total_exposure_time }}</span>
+						Total exposure time <span class="badge">{{ total_exposure_time|astro_round:0 }} </span>
 					</li>
 					<li class="list-group-item"> 
 						<i class="fa fa-warning text-danger"></i> Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ max_signal_obj_sky_dit }}</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Detector saturation limit (e<sup>-</sup>) <span class="badge">{{ saturation_time }}</span>
+						Detector saturation limit (e<sup>-</sup>) <span class="badge">{% astro_round_to saturation_time 0 's' %} </span>
 					</li>
 					<li class="list-group-item "> 
-						Aperture Radius (defining the S/N reference area) <span class="badge">{{ Aperture_radius|astro_unit_value:'mas'|floatformat:0 }} mas</span>
+						Aperture Radius (defining the S/N reference area) <span class="badge">{% astro_round_to Aperture_radius 0 'mas' %} mas</span>
 					</li>
 					<li class="list-group-item"> 
 						Number of pixels in Aperture <span class="badge">{{ AreaNpix|floatformat:0 }} pixels</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">{{ signal_req }}</span>
+						Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">{{ signal_req|astro_round:1 }}</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">{{ signal_req }}</span>
+						Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">{{ signal_req_per_dit|astro_round:1 }}</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Background (1 DIT) <span class="badge">{{ signal_noise_req }}</span>
+						Background (1 DIT per pix) <span class="badge">{{ background|astro_round:1 }}</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Limiting magnitude (S/N=3) <span class="badge">{{ dit }}</span>
+						<i class="fa fa-warning text-danger"></i> Limiting magnitude (S/N=3) <span class="badge">????</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> BLIP integration time <span class="badge">{{ BLIP_time }}</span>
+						BLIP integration time <span class="badge">{{ BLIP_time|astro_round:0 }}</span>
 					</li>
-					<li class="list-group-item"> 
-						Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio.0|percentage|floatformat }}%</span>
-					</li>
+					{%if not target_info.extended %}
 					<li class="list-group-item"> 
 						Encircled Energy (Target)  <span class="badge">{{ encircled_energy.0|percentage|floatformat }}%</span>
 					</li>
+					{% endif %}
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Estimated {{ filter.Name }}-band ( {{ target_info.lambda_band }} ) on-axis Strehl Ratio  <span class="badge">{{ ndit }}</span>
-					</li>
-					<li class="list-group-item"> 
-						Overall transmission at {{ obs_filter.wave_median|astro_unit:'AA'}}<span class="badge">{{ throughput_lambda|astro_unit_value|floatformat:2 }} {{throughput_lambda.unit}}</span>
+						Overall transmission at {% astro_round_to obs_filter.wave_median 1 'AA' %}<span class="badge">{{ throughput_lambda|astro_round:2 }}</span>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	{% comment %}
-	<div class="row">
-		<div class="col-xs-12 col-md-6">
-			<div class="col-xs-12">
-				<ul class="list-group">
-					<li class="list-group-item list-group-item-info">Intermediate Values</li>
-					<li class="list-group-item"> Encircled Energy <span class="badge">{{ encircled_energy }}</span> </li>
-					<li class="list-group-item"> Aperture radius <span class="badge">{{ Aperture_radius|astro_unit:'mas' }}</span> </li>
-					<li class="list-group-item"> Npix <span class="badge">{{ AreaNpix }}</span> </li>
-					<li class="list-group-item"> pixscale <span class="badge">{{ Pixscale }}</span> </li>
-					<li class="list-group-item"> Target Photons / s <span class="badge">{{ detected_photons_from_source }}</span> </li>
-					<li class="list-group-item"> Sky Photons  /(s sqr.arcsec)<span class="badge">{{ detected_photons_from_sky_sqarcsec }}</span> </li>
-					<li class="list-group-item"> PhotonNoise per components per unit time<span class="badge">{{ photons_noise }}</span> </li>
-					<li class="list-group-item"> Atmospfheric Transmission <span class="badge">{{ atmospheric_transmission }}</span> </li>
-					<li class="list-group-item"> Efficiency <span class="badge">{{ efficiency }}</span> </li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	{% endcomment %}
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<div class="panel panel-primary">
@@ -472,6 +455,7 @@
 				</div>
 			</div>
 		</div>
+		{% if snr_graph %}
 		<div class="col-md-6 col-xs-12">
 			<div class="panel panel-primary">
 				<div class="panel-heading">SNR</div>
@@ -480,6 +464,7 @@
 				</div>
 			</div>
 		</div>
+		{% endif %}
 	</div>
 	{% comment %}
 	<div class="row">
