--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -130,6 +130,7 @@
 			</div>
 		</div>
 	</div>
+	{%comment%}
 	<div class="col-xs-12 col-md-12 form-inline">
 		<div class="panel panel-primary hide" id="ifu_dependent">
 			<div class="panel-heading">
@@ -160,6 +161,7 @@
 			</div>
 		</div>
 	</div>
+	{% endcomment %}
 	{% comment %}
 	<div class="col-xs-12 form-inline spec_dependent hide">
 		<div class="panel panel-primary">
@@ -192,9 +194,9 @@
 			</div>
 			<div class="panel-body">
 				<div class="row " id="naco">
-					<div class="col-xs-4 text-center"> <input type="checkbox" name="2d_psf" /> 2-D PSF image (jpg and FITS) (point source only)</div>
+					<div class="col-xs-4 text-center"> <input type="checkbox" name="2d_psf" checked/> 2-D PSF image (jpg and FITS) (point source only)</div>
 					<div class="col-xs-4 text-center"> <input type="checkbox" name="enc_energy_aperture_radius" disabled/> Encircled Energy as a function of Aperture Radius (point source only)</div>
-					<div class="col-xs-4 text-center"> <input type="checkbox" name="sn_as_exp_time" disabled/> S/N as a function of Exposure Time </div>
+					<div class="col-xs-4 text-center"> <input type="checkbox" name="sn_as_exp_time" checked/> S/N as a function of Exposure Time </div>
 				</div>
 			</div>
 		</div>
